[package]
name = "kit-ais-dataset"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
chrono = "0.4.19"
noisy_float = { version = "0.2.0", features = ["serde"] }
serde = { version = "1.0.130", features = ["derive"] }
serde-xml-rs = "0.5.0"

[dev-dependencies]
glob = "0.3.0"
