[package]
name = "kit-ais-dataset"
description = "Data types and loader for KIT AIS data set"
version = "0.1.0"
authors = ["jerry73204 <jerry73204@gmail.com>"]
edition = "2021"
homepage = "https://github.com/jerry73204/kit-ais-dataset-rs"
repository = "https://github.com/jerry73204/kit-ais-dataset-rs"
documentation = "https://docs.rs/kit-ais-dataset/"
keywords = ["dataset", "VOC"]
categories = ["science"]
license = "MIT"
readme = "README.md"

[dependencies]
chrono = "0.4.19"
noisy_float = { version = "0.2.0", features = ["serde"] }
serde = { version = "1.0.130", features = ["derive"] }
serde-xml-rs = "0.5.0"

# [dev-dependencies]
# glob = "0.3.0"
